# cse467-calpoly

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GPUSim  Makefile  Makefile2  README.md  cmake_install.cmake  example.off  main  main.c  teapot.off  teapot.pgm
ArrayList/: ArrayList.c  ArrayList.h
HashSet/: HashSet.c  HashSet.h  Makefile  test_HashSet  test_HashSet.c
Lighting/: Lighting.c  Lighting.h  Lighting_tests.c  Makefile
OffFile/: OffFile.c  OffFile.h
PGMFile/: PGMFile.c  PGMFile.h
Primitives/: Makefile  Primitives.c  Primitives.h  Primitives_test  Primitives_test.c
Projection/: Projection.c  Projection.h
Rasterization/: Makefile  Rasterization.c  Rasterization.h  test_Rasterization  test_Rasterization.c
Transformation/: Transformation.c  Transformation.h
